Update files page to use fractions for price

--- a/frontend/src/renderer/src/assets/main.css
+++ b/frontend/src/renderer/src/assets/main.css
@@ -278,6 +278,11 @@ body {
   cursor: pointer;
 }
 
+.FilesPage .price_col {
+  flex: 0.2;
+  cursor: pointer;
+}
+
 .FilesPage .delete_col {
   flex: 0.05;
   cursor: pointer;
