--- a/frontend/src/renderer/src/assets/main.css
+++ b/frontend/src/renderer/src/assets/main.css
@@ -298,12 +298,12 @@ body {
   font-size: 24px;
 }
 
-.FilesPage input[type="number"]::-webkit-inner-spin-button,
-.FilesPage input[type="number"]::-webkit-outer-spin-button {
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
-.FilesPage input[type="number"]{
+[type="number"]{
   -moz-appearance: textfield;
 }
